--- a/package.json
+++ b/package.json
@@ -1,30 +1,39 @@
 {
-  "name": "directus-extension-searchsync",
-  "version": "1.0.3",
-  "author": {
-    "email": "dimitrov.adrian+gh@gmail.com",
-    "name": "Adrian Dimitrov"
-  },
-  "license": "MIT",
-  "directus:extension": {
-    "type": "hook",
-    "path": "lib/index.js",
-    "source": "lib/index.js",
-    "host": "^v9.0.0",
-    "hidden": false
-  },
-  "homepage": "https://github.com/dimitrov-adrian/directus-extension-searchsync",
-  "dependencies": {
-    "striptags": "^3.2.0",
-    "cosmiconfig": "^7.0.1",
-    "axios": "^0.24.0"
-  },
-  "devDependencies": {
-    "eslint": "^8.4.0",
-    "prettier": "^2.5.0",
-    "@directus/shared": "^9.0.0"
-  },
-  "files": [
-    "lib"
-  ]
+	"name": "directus-extension-searchsync",
+	"description": "Please enter a description for your extension",
+	"icon": "extension",
+	"version": "1.0.0",
+	"author": {
+		"email": "derskillbaumapfel@gmail.com",
+		"name": "DerSkillBaumApfel"
+	},
+	"homepage": "https://github.com/HeurekaSolutions/directus-extension-searchsync",
+	"keywords": [
+		"directus",
+		"directus-extension",
+		"directus-custom-hook"
+	],
+	"type": "module",
+	"directus:extension": {
+		"type": "hook",
+		"path": "dist/index.js",
+		"source": "src/index.ts",
+		"host": "^10.3.0"
+	},
+	"scripts": {
+		"build": "directus-extension build",
+		"dev": "directus-extension build -w --no-minify",
+		"link": "directus-extension link"
+	},
+	"dependencies": {
+		"axios": "^1.6.5",
+		"striptags": "^3.2.0"
+	},
+	"devDependencies": {
+		"@directus/extensions-sdk": "10.3.0",
+		"@types/node": "^20.11.0",
+		"typescript": "^5.3.3"
+	}
 }
+
+
